[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plyvel-stubs"
version = "1.5.1"
description = "Type stubs for plyvel"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ysenarath" }]
keywords = ["plyvel", "typing", "stubs", "leveldb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Stubs Only",
]

[project.urls]
Homepage = "https://github.com/ysenarath/plyvel-stubs"
Repository = "https://github.com/ysenarath/plyvel-stubs"

[tool.hatch.build]
include = ["plyvel-stubs/*.pyi"]
